[project]
name = "jades-sky-fraction"
version = "0.0.1"
description = "Quantifying sky fraction in the JADES GOODS-S and GOODS-N fields"
authors = [{ name = "Samuel Hinton", email = "samuelreay@gmail.com" }]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "astropy>=7.0.1",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "polars>=1.22.0",
    "scipy>=1.15.1",
    "sep>=1.4.0",
    "tqdm>=4.67.1",
]

[project.urls]
Repository = "https://github.com/samreay/jades-sky-fraction"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.22.0",
    "mypy>=0.991",

    "ruff>=0.9.2",

]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"



[tool.mypy]
files = ["src"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py39"
line-length = 120
fix = true

[tool.ruff.lint]
select = [
    "YTT",
    "S",
    "B",
    "A",
    "C4",
    "T10",
    "SIM",
    "I",
    "C90",
    "E", "W",
    "F",
    "PGH",
    "UP",
    "RUF",
    "TRY",
]
ignore = [
    "E501",
    "E731",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
"__init__.py" = ["F401"]

[tool.ruff.format]
preview = true
